alteracao tela html

--- a/cliente.html
+++ b/cliente.html
@@ -6,7 +6,28 @@
         <title>Cadastro de Clientes</title>
     </head>
     <body>
-        
-        <script src="cliente.js"></script>
+        <div>
+            <label> Nome </label>
+            <input>
+        </div>
+        <div>
+            <label> E-mail </label>
+            <input>
+        </div>
+        <div>    
+            <label> Telefone </label>
+            <input>
+        </div>    
+            <label> UF </label>
+            <select>
+                    <option>Selecione</option>
+                    <option>MS</option>
+                    <option>SP</option>
+                    <option>RJ</option>
+            </select>  
+        <div>
+                    <button> Salvar </button>
+        </div>      
+            
     </body>
 </html>
